Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41855

tst_qquicktextinput fails in dev

    XMLWordPrintable

Details

    • 29e679bed9fe08cb0713760554e412525dc6ce26

    Description

      It always seems to crash in backspaceSurrogatePairs() with an assert from deep inside font handling, e.g. like this:

      #0  0x00007ffff475b1a5 in *__GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      #1  0x00007ffff475e420 in *__GI_abort () at abort.c:92
      #2  0x00007ffff577e498 in qt_message_fatal (context=..., message=...) at /home/ulf/dev/qt5-src/qtbase/src/corelib/global/qlogging.cpp:1397
      #3  0x00007ffff577accc in QMessageLogger::fatal (this=0x7fffffffa250, msg=0x7ffff5b32440 "ASSERT failure in %s: \"%s\", file %s, line %d")
          at /home/ulf/dev/qt5-src/qtbase/src/corelib/global/qlogging.cpp:606
      #4  0x00007ffff5774d06 in qt_assert_x (where=0x7ffff72c2bce "QVector<T>::at", what=0x7ffff72c2ba4 "index out of range", 
          file=0x7ffff72c2b58 "../../include/QtCore/../../../../qt5-src/qtbase/src/corelib/tools/qvector.h", line=388) at /home/ulf/dev/qt5-src/qtbase/src/corelib/global/qglobal.cpp:2799
      #5  0x00007ffff6ee1a35 in QVector<unsigned int>::at (this=0x7fffffffa2f0, i=0) at ../../include/QtCore/../../../../qt5-src/qtbase/src/corelib/tools/qvector.h:388
      #6  0x00007ffff6f3bb15 in QFontEngine::alphaRGBMapForGlyph (this=0x7fffe81636d0, glyph=0, t=...) at /home/ulf/dev/qt5-src/qtbase/src/gui/text/qfontengine.cpp:795
      #7  0x00007ffff71424ed in QTextureGlyphCache::textureMapForGlyph (this=0x7fffe8228f10, g=0, subPixelPosition=...)
          at /home/ulf/dev/qt5-src/qtbase/src/gui/painting/qtextureglyphcache.cpp:264
      #8  0x00007ffff71d75a1 in QOpenGLTextureGlyphCache::fillTexture (this=0x7fffe8228f10, c=..., glyph=0, subPixelPosition=...)
          at /home/ulf/dev/qt5-src/qtbase/src/gui/opengl/qopengltextureglyphcache.cpp:346
      #9  0x00007ffff7142439 in QTextureGlyphCache::fillInPendingGlyphs (this=0x7fffe8228f10) at /home/ulf/dev/qt5-src/qtbase/src/gui/painting/qtextureglyphcache.cpp:251
      #10 0x00007ffff782f2b8 in QSGTextMaskMaterial::populate (this=0x7fffe81ab350, p=..., glyphIndexes=..., glyphPositions=..., geometry=0x7fffe8152250, boundingRect=0x7fffffffa790, 
          baseLine=0x7fffe8152238, margins=...) at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/scenegraph/qsgdefaultglyphnode_p.cpp:409
      #11 0x00007ffff782d382 in QSGDefaultGlyphNode::update (this=0x7fffe8152140) at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/scenegraph/qsgdefaultglyphnode.cpp:121
      #12 0x00007ffff78ec6d5 in QQuickTextNode::addGlyphs (this=0x7fffe8527430, position=..., glyphs=..., color=..., style=QQuickText::Normal, styleColor=..., parentNode=0x0)
          at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/items/qquicktextnode.cpp:154
      #13 0x00007ffff78f272b in QQuickTextNodeEngine::addToSceneGraph (this=0x7fffe82178d0, parentNode=0x7fffe8527430, style=QQuickText::Normal, styleColor=...)
          at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/items/qquicktextnodeengine.cpp:698
      #14 0x00007ffff78ed2ab in QQuickTextNode::addTextLayout (this=0x7fffe8527430, position=..., textLayout=0x7fffe8593378, color=..., style=QQuickText::Normal, styleColor=..., 
          anchorColor=..., selectionColor=..., selectedTextColor=..., selectionStart=-1, selectionEnd=-2, lineStart=0, lineCount=1)
          at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/items/qquicktextnode.cpp:305
      #15 0x00007ffff78fcfbe in QQuickTextInput::updatePaintNode (this=0x7fffe8371cd0, oldNode=0x0, data=0x7fffe846f4e0)
          at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/items/qquicktextinput.cpp:1883
      #16 0x00007ffff7894e6b in QQuickWindowPrivate::updateDirtyNode (this=0x7fffe846f350, item=0x7fffe8371cd0) at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/items/qquickwindow.cpp:2810
      #17 0x00007ffff7893e79 in QQuickWindowPrivate::updateDirtyNodes (this=0x7fffe846f350) at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/items/qquickwindow.cpp:2635
      #18 0x00007ffff7888e90 in QQuickWindowPrivate::syncSceneGraph (this=0x7fffe846f350) at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/items/qquickwindow.cpp:338
      #19 0x00007ffff784e730 in QSGGuiThreadRenderLoop::renderWindow (this=0xad9400, window=0x7fffffffd160) at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/scenegraph/qsgrenderloop.cpp:379
      #20 0x00007ffff784ebdc in QSGGuiThreadRenderLoop::exposureChanged (this=0xad9400, window=0x7fffffffd160)
          at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/scenegraph/qsgrenderloop.cpp:428
      #21 0x00007ffff78887ae in QQuickWindow::exposeEvent (this=0x7fffffffd160) at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/items/qquickwindow.cpp:206
      #22 0x00007ffff6e91caf in QWindow::event (this=0x7fffffffd160, ev=0x7fffffffcdd0) at /home/ulf/dev/qt5-src/qtbase/src/gui/kernel/qwindow.cpp:2016
      #23 0x00007ffff788d47a in QQuickWindow::event (this=0x7fffffffd160, e=0x7fffffffcdd0) at /home/ulf/dev/qt5-src/qtdeclarative/src/quick/items/qquickwindow.cpp:1383
      #24 0x00007ffff5a16886 in QCoreApplicationPrivate::notify_helper (this=0x6d1c80, receiver=0x7fffffffd160, event=0x7fffffffcdd0)
          at /home/ulf/dev/qt5-src/qtbase/src/corelib/kernel/qcoreapplication.cpp:1049
      #25 0x00007ffff5a1654a in QCoreApplication::notify (this=0x7fffffffe150, receiver=0x7fffffffd160, event=0x7fffffffcdd0)
          at /home/ulf/dev/qt5-src/qtbase/src/corelib/kernel/qcoreapplication.cpp:994
      #26 0x00007ffff6e811f4 in QGuiApplication::notify (this=0x7fffffffe150, object=0x7fffffffd160, event=0x7fffffffcdd0)
          at /home/ulf/dev/qt5-src/qtbase/src/gui/kernel/qguiapplication.cpp:1555
      #27 0x00007ffff5a16452 in QCoreApplication::notifyInternal (this=0x7fffffffe150, receiver=0x7fffffffd160, event=0x7fffffffcdd0)
          at /home/ulf/dev/qt5-src/qtbase/src/corelib/kernel/qcoreapplication.cpp:932
      #28 0x00007ffff6e88acb in QCoreApplication::sendSpontaneousEvent (receiver=0x7fffffffd160, event=0x7fffffffcdd0)
          at ../../include/QtCore/../../../../qt5-src/qtbase/src/corelib/kernel/qcoreapplication.h:231
      #29 0x00007ffff6e85e0e in QGuiApplicationPrivate::processExposeEvent (e=0x7fffe8479500) at /home/ulf/dev/qt5-src/qtbase/src/gui/kernel/qguiapplication.cpp:2634
      #30 0x00007ffff6e814b6 in QGuiApplicationPrivate::processWindowSystemEvent (e=0x7fffe8479500) at /home/ulf/dev/qt5-src/qtbase/src/gui/kernel/qguiapplication.cpp:1661
      #31 0x00007ffff6e6a3a5 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at /home/ulf/dev/qt5-src/qtbase/src/gui/kernel/qwindowsysteminterface.cpp:564
      #32 0x00007ffff06d0b88 in userEventSourceDispatch (source=0x7fffe800f510) at /home/ulf/dev/qt5-src/qtbase/src/platformsupport/eventdispatchers/qeventdispatcher_glib.cpp:70
      #33 0x00007ffff274d355 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #34 0x00007ffff274d688 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #35 0x00007ffff274d744 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #36 0x00007ffff5a92497 in QEventDispatcherGlib::processEvents (this=0x7fffe8037c40, flags=...) at /home/ulf/dev/qt5-src/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:418
      #37 0x00007ffff06d0d9e in QPAEventDispatcherGlib::processEvents (this=0x7fffe8037c40, flags=...)
          at /home/ulf/dev/qt5-src/qtbase/src/platformsupport/eventdispatchers/qeventdispatcher_glib.cpp:115
      #38 0x00007ffff5a169b4 in QCoreApplication::processEvents (flags=..., maxtime=4970) at /home/ulf/dev/qt5-src/qtbase/src/corelib/kernel/qcoreapplication.cpp:1130
      #39 0x0000000000412835 in QTest::qWaitForWindowActive (window=0x7fffffffd160, timeout=5000)
          at /home/ulf/dev/qt5-dev/qtbase/include/QtTest/../../../../qt5-src/qtbase/src/testlib/qtestsystem.h:73
      

      See, for example:
      http://testresults.qt-project.org/ci/QtBase_dev_Integration/build_04233/revdep-qtdeclarative_linux-g++_developer-build_qtnamespace_qtlibinfix_Ubuntu_11.10_x64/log.txt.gz
      http://testresults.qt-project.org/ci/QtDeclarative_dev_Integration/build_01852/linux-g++_developer-build_OpenSuSE_13.1_x64/log.txt.gz
      http://testresults.qt-project.org/ci/QtDeclarative_dev_Integration/build_01855/linux-g++_developer-build_OpenSuSE_13.1_x64/log.txt.gz
      http://testresults.qt-project.org/ci/QtDeclarative_dev_Integration/build_01853/linux-g++_developer-build_OpenSuSE_13.1_x64/log.txt.gz
      http://testresults.qt-project.org/ci/QtDeclarative_dev_Integration/build_01852/linux-g++_developer-build_OpenSuSE_13.1_x64/log.txt.gz

      ... and many more.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes